--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  toggle_switch: "^0.1.8"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
