--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -30,8 +30,16 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+
+  flutter_local_notifications: ^1.4.4+2
+  sqflite: ^1.3.0
+  path_provider: ^1.2.0
+  path: ^1.6.2
+  intl: ^0.16.1
   flutter_test:
     sdk: flutter
+  toggle_switch: "^0.1.8"
+  carousel_slider: ^1.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -43,7 +51,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets :
+    - images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
