[feat]: 음성알람 기능추가

--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  audioplayers: ^0.15.1
+  shared_preferences: ^0.4.3
 
 dev_dependencies:
 
@@ -54,6 +56,11 @@ flutter:
   assets:
     - images/on.png
     - images/off.png
+    - assets/finish1.m4a
+    - assets/finish2.m4a
+    - assets/finish3.m4a
+    - assets/study.m4a
+    - assets/wakeup.m4a
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
