--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  splashscreen:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +44,7 @@ dev_dependencies:
   toggle_switch: "^0.1.8"
   carousel_slider: ^1.4.1
 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -61,6 +62,8 @@ flutter:
     - images/sound_off.png
     - images/sound_off2.png
     - images/sound_off3.png
+    - images/logo03.png
+    - images/logo08.png
     - images/on.png
     - images/off.png
     - assets/finish1.m4a
