--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   shared_preferences: ^0.4.3
+  quiver: ^2.1.5
 
 dev_dependencies:
 
