--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -72,6 +72,11 @@ flutter:
     - assets/finish3.m4a
     - assets/study.m4a
     - assets/wakeup.m4a
+    - assets/Study start.m4a
+    - assets/Study end.m4a
+    - assets/Rest start.m4a
+    - assets/Rest end.m4a
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
