--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -30,20 +30,24 @@ dependencies:
   cupertino_icons: ^1.0.0
   shared_preferences: ^0.4.3
   quiver: ^2.1.5
+  path_provider: ^1.6.27
+  flutter_audio_recorder: ^0.5.5
+  audioplayers: ^0.17.3
 
 dev_dependencies:
 
-  audioplayers: ^0.7.8
+
   gradient_app_bar: ^0.0.1
   flutter_local_notifications: ^1.4.4+2
   sqflite: ^1.3.0
-  path_provider: ^0.4.1
+
   path: ^1.6.2
   intl: ^0.16.1
   flutter_test:
     sdk: flutter
   toggle_switch: "^0.1.8"
   carousel_slider: ^1.4.1
+
 
 
 # For information on the generic Dart part of this file, see the
