--- a/timmyroom_jansori/pubspec.yaml
+++ b/timmyroom_jansori/pubspec.yaml
@@ -30,14 +30,16 @@ dependencies:
   cupertino_icons: ^1.0.0
   shared_preferences: ^0.4.3
   quiver: ^2.1.5
+  flutter_audio_recorder: ^0.5.5
+  path_provider: ^1.6.27
+  audioplayers: ^0.17.3
 
 dev_dependencies:
 
-  audioplayers: ^0.7.8
+
   gradient_app_bar: ^0.0.1
   flutter_local_notifications: ^1.4.4+2
   sqflite: ^1.3.0
-  path_provider: ^0.4.1
   path: ^1.6.2
   intl: ^0.16.1
   flutter_test:
